# quadruped_robot

./: .gitignore  LICENSE
src/FAST_LIO_SAM/FAST_LIO_SAM/: CMakeLists.txt
src/FAST_LIO_SAM/FAST_LIO_SAM/config/: mid360.yaml  rslidar16.yaml
src/FAST_LIO_SAM/FAST_LIO_SAM/launch/: mapping_avia.launch  mapping_horizon.launch  mapping_mid360.launch  mapping_ouster64.launch  mapping_rs.launch  mapping_rslidar16.launch  mapping_velodyne.launch
src/FAST_LIO_SAM/FAST_LIO_SAM/src/: laserMapping.cpp  preprocess.cpp
src/free_edge/: CMakeLists.txt  package.xml
src/free_edge/free_edge/: free_edge.cc  free_edge.h  lidar_accumulate.cc  lidar_accumulate.h  main.cc
src/free_edge/free_edge/data_interface/: base_interface.h  data_interface.cc  data_interface.h
src/free_edge/launch/: depth.launch  lidar.launch  livox.launch
src/lidar_driver/livox_ros_driver2/: build.sh
src/map_manager/: CMakeLists.txt  package.xml
src/map_manager/launch/: map_broadcaster.launch
src/map_manager/scripts/: map2d_broadcaster.py  map2d_transform.py  map3d_transform.py  map_preprocess.sh  map_save_fast_lio_sam.sh  map_viewer.py  trans_modifier.py  utils.py
src/pcd_localization/: CMakeLists.txt  package.xml
src/pcd_localization/launch/: pcd_localization.launch
src/pcd_localization/pcd_localization/: main.cc  pcd_localization.cc  pcd_localization.h
src/pcd_localization/pcd_localization/data_interface/: base_interface.h  data_interface.cc  data_interface.h
src/pcd_preprocess/: CMakeLists.txt  package.xml
src/pcd_preprocess/launch/: pcd_undistorted.launch
src/pcd_preprocess/pcd_preprocess/: lidar_filter.cc  lidar_filter.h  lidar_undistortor.cc  lidar_undistortor.h  main.cc  pcd_preprocess.cc  pcd_preprocess.h
src/pcd_preprocess/pcd_preprocess/data_interface/: base_interface.h  data_interface.cc  data_interface.h
src/quadruped_robot/: CMakeLists.txt  package.xml
src/quadruped_robot/quadruped_robot/config/: rviz_nav.rviz
src/quadruped_robot/quadruped_robot/launch/: demo_bag_mapping.launch  demo_bag_navigation.launch  demo_bag_record.launch  demo_real_mapping.launch  demo_real_navigation.launch
src/quadruped_robot/quadruped_robot/launch/include/hardware/: bringup.launch  static_tf.launch
src/quadruped_robot/quadruped_robot/launch/include/localization/: fastlio_localization.launch  pcd_localization.launch  robot_localization.launch
src/quadruped_robot/quadruped_robot/launch/include/mapping/: fast_lio_sam_mapping.launch
src/quadruped_robot/quadruped_robot/launch/include/navigation/: move_base.launch
src/quadruped_robot/quadruped_robot/launch/include/perception/: lidar_filter.launch
src/quadruped_robot/scripts/: odom_tf.py  save_bag.sh
