<?xml version="1.0"?>
<package format="3">
    <name>free_edge</name>
    <version>0.0.0</version>
    <description>The free_edge package</description>
    <maintainer email="925025459@qq.com">aalicecc</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>

</package>
