<?xml version="1.0"?>
<package format="3">
    <name>pcd_preprocess</name>
    <version>0.0.0</version>
    <description>The pcd_preprocess package</description>
    <maintainer email="925025459@qq.com">aalicecc</maintainer>
    <license>GPL-3.0 license</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>livox_ros_driver2</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    
</package>
