<?xml version="1.0"?>
<package format="3">
    <name>quadruped_robot</name>
    <version>0.0.0</version>
    <description>The quadruped_robot package</description>
    <maintainer email="925025459@qq.com">aalicecc</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
